server implementation with middlewares
